# strucdiff

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: diff.rs  format.rs  main.rs  output.rs  schema.rs
