[package]
name = "strucdiff"
version = "0.2.0"
edition = "2021"
description = "Semantic structured data diff CLI — compare JSON, YAML, TOML, and CSV files structurally"
authors = ["EdgarOrtegaRamirez"]
license = "MIT"
repository = "https://github.com/EdgarOrtegaRamirez/strucdiff"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"
colored = "2.1"
walkdir = "2.5"